[build-system]
requires = ["setuptools>=40.6.0", "wheel", "logging", "subprocess",
		"os", "pathlib", "psutil", "mock", "pytest"]
build-backend = "setuptools.build_meta"

# https://hynek.me/articles/sharing-your-labor-of-love-pypi-quick-and-dirty/ 
# Not necessary for packaging but every self-respecting Python
# package should a) use black and b) fix the WRONG default.
[tool.black]
line-length = 79
